Support tracing of single REST calls
To investigate why a certain REST call failed one needs to find matching
messages in the logs. Sometimes this is not as easy as it sounds:

1. Error reports may not tell which REST endpoint was invoked and what
   was the resource ID.
2. For busy servers finding logs that correspond to the failing REST
   call may be difficult because of the huge amount of logs. Matching
   logs by the timestamp of when the request was done may also not be
   straight-forward if the user is in a different timezone than the
   server.
3. The error_log normally only contain errors, but no detailled debug
   information.
4. Enabling debug logs effects all requests and usually results in a lot
   of log spam.

The idea of this change is to enable debug traces on need for single
requests:

- A debug trace is enabled by setting 'trace' as request paramater
- The response contains 'X-Gerrit-Trace' header with the trace ID
- An administrator can use the trace ID to find all logs for this
  request in the error log.
- The debug trace can contain additional debug information which is not
  written when tracing is disabled.

Optionally a trace ID can be specified for further requests so that the
logs for these requests are written to the existing debug trace. This is
useful if an action (e.g. from the UI) triggers multiple REST calls that
should be traced together (UI support for this is not part of this
change).

If tracing is enabled all log messages that correspond to the traced
request are prefixed with `[<traceId>]', e.g.:

  [2018-02-23 15:04:27,134] [HTTP-75] INFO  com.google.gerrit.httpd.restapi.RestApiServlet : [5b6c76d4-f25e-4c8c-8aa0-3bcb57446b3a] Received REST request: GET /a/accounts/?trace&q=ad
  [2018-02-23 15:04:27,135] [HTTP-75] INFO  com.google.gerrit.httpd.restapi.RestApiServlet : [5b6c76d4-f25e-4c8c-8aa0-3bcb57446b3a] Calling user: admin
  ...
  [2018-02-23 15:04:27,232] [HTTP-75] INFO  com.google.gerrit.httpd.restapi.RestApiServlet : [5